Fix text not wrapping correctly

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -317,3 +317,8 @@ app-loading.in-dialog {
 .flex-spacer {
     flex: 1;
 }
+
+mat-list-item.no-height {
+    height: unset!important;
+    padding: 16px 0!important;
+}
